[tool.poetry]
name = "ethereum-sigdump"
version = "0.1.0"
description = ""
authors = ["Nils Amiet <nils.amiet@kudelskisecurity.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
eth-keys = "^0.4.0"
rlp = "^3.0.0"
pycryptodome = "^3.15.0"
coincurve = "^17.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
